openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oc-devspaces-pythonapp
  labels:
    app: oc-devspaces-pythonapp
    app.kubernetes.io/name: oc-devspaces-pythonapp
spec:
  selector:
    app: oc-devspaces-pythonapp
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
