openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oc-devspaces-pythonapp
  labels:
    app: oc-devspaces-pythonapp
    app.kubernetes.io/name: oc-devspaces-pythonapp
spec:
  to:
    kind: Service
    name: oc-devspaces-pythonapp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
